{
    "name": "InputActions",
    "maps": [
        {
            "name": "Game",
            "id": "6113e7b3-bcf6-4ecf-bcf1-5f414c6b4a2c",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "41284a7a-f24f-47d4-aee5-c1427f4f20e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "4ed3f818-fed4-4274-97b8-63c40720c78b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDelta",
                    "type": "Value",
                    "id": "8634ecbe-b9b2-43b8-914c-3191eda68b0f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchStartPosition",
                    "type": "Value",
                    "id": "a152f35c-58fa-44ed-a127-bacb13423de8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "53c04f2e-c6cc-435b-8029-c5ce8fb08fa0",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "497514a8-fe59-4b13-80ff-2ec56fe1ba2d",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57b3af6e-8eba-4fe7-bbb0-0d72496996e9",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6470ddb-9962-4a3d-b3b8-c5fec62cf75f",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b28e29d-922b-4f4b-97b0-21c2b1cfaf43",
                    "path": "<Touchscreen>/touch0/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchStartPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98af016e-c4d8-4edc-8fe2-bdfccf6afb30",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c109852-f8a1-4487-9ca3-a2fc6b1c9502",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}